# agent-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
benches/: agent_throughput_bench.rs  backoff_bench.rs  idle_strategy_bench.rs
docs/: performance_design.md
docs/sessions/: 2026-04-14-performance-review-plan.md
examples/: controllable_idle.rs  counter_agent.rs  multi_agent.rs  simple_agent.rs
src/: agent.rs  agent_invoker.rs  agent_runner.rs  error.rs  error_handler.rs  idle_strategy.rs  lib.rs
tests/: agent_lifecycle_test.rs  integration_test.rs  invoker_test.rs  runner_state_machine_test.rs
